@@ -1,5 +1,9 @@
 2009-11-24  ebin <yutaka@ebine.org>
 
+	* sabel/db/Model.php: Sabel_Db_ModelにselectForUpdateメソッド追加。
+
+2009-11-24  ebin <yutaka@ebine.org>
+
 	* sabel/kvs: KVS(Key-Value-Store)パッケージの追加。
 
 2009-11-23  hamaco  <hamanaka.kazuhiro@gmail.com>
